--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -6,7 +6,7 @@
 {#    {% include 'expert/layouts/initial_information.html' %}#}
 {% endblock %}
 
-{% block name %}رضا باسره{% endblock %}
+{% block name %}دکتر احسان شریف{% endblock %}
 
 {% block dialog %}
     {% include 'expert/layouts/showProject.html' %}
