--- a/expert/templates/expert/layouts/projectList.html
+++ b/expert/templates/expert/layouts/projectList.html
@@ -8,21 +8,21 @@
             </ul>
             <div class="tab-content">
                 <div class="card project-item">
-                    <span class="header">پروژه شماره 1 <span class="sub-header">( 2 روز قبل )</span></span>
+                    <span class="header">محلول کشت سلولی <span class="sub-header">( 2 ماه قبل )</span></span>
                     <span><i class="fas fa-dollar-sign"></i><span>35,000,000</span> ریال </span>
-                    <span><i class="fas fa-hourglass-end"></i>تا اتمام پروژه <span>2 روز</span> فرصت باقی است!</span>
+                    <span><i class="fas fa-hourglass-end"></i>تا اتمام پروژه <span>8 ماه</span> فرصت باقی است!</span>
                     <button type="button" class="chamran-btn-info">مشاهده</button>
                     <button type="button" class="chamran-btn-delete">رد</button>
                 </div>
                 <div class="card project-item">
-                    <span class="header">پروژه شماره 2 <span class="sub-header">( 3 روز قبل )</span></span>
+                    <span class="header">تولید واکسن اچ پی وی<span class="sub-header">( 3 ماه قبل )</span></span>
                     <span><i class="fas fa-dollar-sign"></i><span>5,000,000</span> ریال </span>
                     <span><i class="fas fa-hourglass-end"></i>تا اتمام پروژه <span>10 روز</span> فرصت باقی است!</span>
                     <button type="button" class="chamran-btn-info">مشاهده</button>
                     <button type="button" class="chamran-btn-delete">رد</button>
                 </div>
                 <div class="card project-item">
-                    <span class="header">پروژه شماره 3 <span class="sub-header">( 20 روز قبل )</span></span>
+                    <span class="header">کیت تشخیصی سرطان<span class="sub-header">( 4 ماه قبل )</span></span>
                     <span><i class="fas fa-dollar-sign"></i><span>50,000,000</span> ریال </span>
                     <span><i class="fas fa-hourglass-end"></i>تا اتمام پروژه <span>2 ساعت</span> فرصت باقی است!</span>
                     <button type="button" class="chamran-btn-info">مشاهده</button>
