--- a/expert/templates/expert/layouts/showProject.html
+++ b/expert/templates/expert/layouts/showProject.html
@@ -1,24 +1,76 @@
+{% load static%}
 <div class="dialog-main">
     <div class="card text-right dialog">
         <div class="close"></div>
         <div class="container">
             <div class="row">
                <div class="col-lg-12">
-                   <h6 class="project-title"> عنوان پروژه ( Project title )</h6>
+                   <h6 class="project-title"> محلول کشت سلولی ( FBS )</h6>
                </div>
             </div>
             <div class="row">
-                <div class="col-lg-12">
-                    <span>مهلت انجام:</span>
-                    <span>تاریخ ثبت:</span>
-                    <span class="sub-header">بودجه: </span>
+                <div class="col-lg-6">
+                    <span class="border-span">محیط کشت سلولی </span>
+                    <span class="border-span">PCR</span>
+                    <span class="border-span">فلوسایتومتری</span>
+                </div>
+                <div class="col-lg-6">
+                    <div class="row">
+                        <div class="col-lg-6 text-center">
+                            <span><i class="fas fa-calendar-alt"></i>مهلت انجام</span>
+                        </div>
+                        <div class="col-lg-6 text-center">
+                            <span><i class="fas fa-calendar-check"></i>تاریخ ثبت</span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6 text-center">
+                             <span>12/12/1398</span>
+                        </div>
+                        <div class="col-lg-6 text-center">
+                            <span>20/1/1398</span>
+                        </div>
+                    </div>
                 </div>
             </div>
+{#            <div class="row">#}
+{#                <div class="col-lg-12">#}
+{#                    <span class="header">شاخص ها</span>#}
+{#                    <div class="row">#}
+{#                        <div class="col-lg-12">#}
+{#                            <div class="">#}
+{#                                <div class="header">لطفا مشکل اصلی که پروژه به حل آن پرداخته را توضیح و اهمیت آن را تبیین کنید.</div>#}
+{#                                <span class="body sub-header">#}
+{#                                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.#}
+{#                                </span>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                    <div class="row">#}
+{#                        <div class="col-lg-12">#}
+{#                            <div class="">#}
+{#                                <div class="header">در صورت حل این مشکل، چه پیشرفتی در شیوه های درمانی / تجهیزات پزشکی / خدمات درمانی یا ... حاصل می شود؟</div>#}
+{#                                <span class="body sub-header">#}
+{#                                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.#}
+{#                                </span>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                    <div class="row">#}
+{#                        <div class="col-lg-12">#}
+{#                            <div class="">#}
+{#                                <div class="header">برآورد شما از سود مالی این پروژه چگونه است؟</div>#}
+{#                                <span class="body sub-header">#}
+{#                                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.#}
+{#                                </span>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
             <div class="row">
-                <div class="col-lg-12">
-                    <span class="border-span">کلیدواژه 1</span>
-                    <span class="border-span">کلیدواژه 2</span>
-                    <span class="border-span">کلیدواژه 3</span>
+                <div class="col-lg-12 text-right">
+                    <span style="font-weight: 800;">اطلاعات پروژه</span>
                 </div>
             </div>
             <div class="row-header">
@@ -35,7 +87,7 @@
                         <span class="title sub-header">لطفا مشکل اصلی که پروژه به حل آن پرداخته را توضیح و اهمیت آن را تبیین کنید.</span>
                         <span class="title-back"></span>
                         <span class="body">
-                            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+                            نمونه های موجود در بازار همه از خارج از کشور وارد میشوند و ادعا میشود که از خون جنین گاو در تولید آن ها استفاده میشود ولی این کار بسیار هزینه بر است.
                         </span>
                     </div>
                 </div>
@@ -46,7 +98,9 @@
                         <span class="title sub-header">در صورت حل این مشکل، چه پیشرفتی در شیوه های درمانی / تجهیزات پزشکی / خدمات درمانی یا ... حاصل می شود؟</span>
                         <span class="title-back"></span>
                         <span class="body">
-                            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+                            مصرف کننده های این محصول ، داروسازی ها و مراکز پژوهشی میباشد که در حال حاضر تولیدکننده این محصول شرکت THERMO FISHER میباشد.
+اگر کیفیت محصول تولیدی خوب باشد میتواند جایگزین نمونه خارجی شود.
+
                         </span>
                     </div>
                 </div>
@@ -57,7 +111,7 @@
                         <span class="title sub-header">برآورد شما از سود مالی این پروژه چگونه است؟</span>
                         <span class="title-back"></span>
                         <span class="body">
-                            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+                            براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.
                         </span>
                     </div>
                 </div>
@@ -77,7 +131,7 @@
                         <span class="title sub-header">لطفا راه حل خود را برای حل این مشکل به طور خلاصه توضیح دهید.</span>
                         <span class="title-back"></span>
                         <span class="body">
-                            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+                            به جای استفاده از خون جنین گاو که بسیار هزینه بر است، میتوان از خون گوساله و یا گاوهایی که ذبح میشوند استفاده کرد و سپس این خون را فراوری و فیلتر کرد.
                         </span>
                     </div>
                 </div>
@@ -88,16 +142,125 @@
                         <span class="title sub-header">این راه حل چه مشکلاتی می‌تواند داشته باشد؟</span>
                         <span class="title-back"></span>
                         <span class="body">
-                            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+                            چالش اصلی این کار، مدیریت پروژه و متقاعد کردن کشتارگاه و یا کشاورز برای استقرار یک واحد پژوهشی برای خون گرفتن از گاوها میباشد. چون برای این کار ذبح گاوها باید به طریقی که مسئول پروژه تعیین میکند انجام شود ولی دامداران به راحتی راضی به همکاری نمیشوند و اعتماد نمیکنند و ممکن است هر مشکلی که برای گاوها پیش بیاید را به خاطر کار پژوهشگر بدانند.
                         </span>
                     </div>
                 </div>
             </div>
                 </div>
             </div>
+            <div class="row-header">
+                <span class="prev-line"></span>
+                <span class="header">منابع مورد نیاز</span>
+                <span class="next-line"></span>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="row">
+                <div class="col-lg-12">
+                    <div class="info">
+                        <span class="title sub-header">جهت انجام پروژه خود به چه امکانات یا آزمایشگاه¬هایی احتیاج دارید؟</span>
+                        <span class="title-back"></span>
+                        <span class="body">
+یک تیم خوب آزمایشگاهی و در زمینه های بیوشیمی و ایمونولوژی و بیوتک به همراه دامپزشک
+                        </span>
+                    </div>
+                </div>
+            </div>
+                    <div class="row">
+                <div class="col-lg-12">
+                    <div class="info">
+                        <span class="title sub-header">جهت انجام پروژه خود به چه تخصص¬ها و چه تکنیک¬ها آزمایشگاهی¬ای احتیاج دارید؟ </span>
+                        <span class="title-back"></span>
+                        <span class="body">
+خالص سازی و تحریک سلولها
+                        </span>
+                    </div>
+                </div>
+            </div>
+                    <div class="row">
+                <div class="col-lg-12">
+                    <div class="info">
+                        <span class="title sub-header">لطفا مراحل انجام پروژه خود را مشخص کنید.</span>
+                        <span class="title-back"></span>
+                        <span class="body">
+                        </span>
+                    </div>
+                </div>
+            </div>
+                    <div class="row">
+                <div class="col-lg-12">
+                    <div class="info">
+                        <span class="title sub-header">پروژه شما به چه مقدار سرمایه‌گذاری نیاز دارد؟ </span>
+                        <span class="title-back"></span>
+                        <span class="body">
+بودجه مورد نظر برای R&D  500,000 تومان میباشد.
+                        </span>
+                    </div>
+                </div>
+            </div>
+                    <div class="row">
+                <div class="col-lg-12">
+                    <div class="info">
+                        <span class="title sub-header">پروژه شما از چه مقالات و مستندات کلیدی استفاده خواهد کرد؟</span>
+                        <span class="title-back"></span>
+                        <span class="body">
+مقاله خاصی در این زمینه مد نظر نیست.
+                        </span>
+                    </div>
+                </div>
+            </div>
+                </div>
+            </div>
+            <div class="row-header">
+                <span class="prev-line"></span>
+                <span class="header">قوانین</span>
+                <span class="next-line"></span>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="row">
+                <div class="col-lg-12">
+                    <div class="info">
+                        <span class="title sub-header">از لحاظ نکات اخلاقی (کار با نمونه انسانی، حیوانی، مواد رادیواکتیو و...)، پروژه شما با چه چالش¬هایی روبه¬رو است؟</span>
+                        <span class="title-back"></span>
+                        <span class="body">
+                            قوانین کار با حیوانات باید رعایت شود.
+                        </span>
+                    </div>
+                </div>
+            </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 text-right">
+                    <span style="font-weight: 800;">نظرات</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <form>
+                        <textarea dir="rtl" class="w-100" name="" rows="5" placeholder="متن نظر"></textarea>
+                        <button class="btn chamran_btn" type="button" style="left: 15px;bottom: -30px;">ثبت نظر</button>
+                    </form>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 comments">
+                    <div class="expert-comment">
+                        <img src="{% static 'expert/img/Ehsan.jpg' %}" alt="profile">
+                        <div class="comment-body">
+با سلام، اگر مدت زمان پروژه به 3 ماه تغییر کند قابل انجام خواهد بود، همچنین بودجه پروژه نیاز به 10 درصد افزایش است به جهت کرایه دستگاه فلوسایتومتری
+                        </div>
+                    </div>
+                    <div class="industry-comment">
+                        <img src="{% static 'expert/img/pharmaceutical.jpg' %}" alt=profile">
+                        <div class="comment-body">
+با سلام و وقت بخیر، موارد مطرح شده بررسی خواهد شد و پس از موافقت اطلاع داده خواهد شد
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="messenger">
-        <i class="fas fa-comments fa-2x"></i>
     </div>
 </div>
