--- a/expert/templates/expert/userInfo.html
+++ b/expert/templates/expert/userInfo.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{% static 'expert/css/datepicker-style.css' %}">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery.fancytree/2.30.2/skin-awesome/ui.fancytree.min.css" rel="stylesheet">
 {% endblock %}
-{% block name %}رضا باسره{% endblock %}
+{% block name %}دکتر احسان شریف{% endblock %}
 {% block dialog %}
     {% include 'expert/layouts/dialog.html' %}
 {% endblock %}
