--- a/expert/templates/expert/layouts/base_layout.html
+++ b/expert/templates/expert/layouts/base_layout.html
@@ -24,7 +24,7 @@
         </div>
         <div class="dropdown">
         <button type="button" name="button" class="btn dropdown-toggle" id="dropdown-btn" data-toggle="dropdown">
-          <img src="{% static 'expert/img/profile.jpg' %}" alt="profile" class="dropdown-img profile" height="45px">
+          <img src="{% static 'expert/img/Ehsan.jpg' %}" alt="profile" class="dropdown-img profile" height="45px">
         </button>
         <ul class="dropdown-menu text-center" role="menu" aria-labelledby="dropdown-btn" id="dropdown">
           <li><a href="#">اطلاعات کاربری</a></li>
@@ -43,10 +43,10 @@
     <div class="side-bar">
       <div class="topMargin"></div>
       <div class="expert-icon"></div>
-      <img src="{% static 'expert/img/profile.jpg' %}" alt="profile" class="profile" width="150px" height="150px">
+      <img src="{% static 'expert/img/Ehsan.jpg' %}" alt="Ehsan" class="profile" width="150px" height="150px">
       <h5>{% block name %}{% endblock %}</h5>
       <h6>استاد</h6>
-      <p dir="rtl" class="scoreDiv text-right">امتیاز: <span>{{ score|default:0 }}</span>/100</p>
+      <p dir="rtl" class="scoreDiv text-right">امتیاز: <span>{{ score|default:3 }}</span>/10</p>
       <div class="progress">
         <div class="progress-bar" role="progressbar" aria-valuenow="{{ score|default:0 }}" aria-valuemin="0" aria-valuemax="100" style="width: 70px">
           <span class="sr-only">{{ score|default:0 }}% completed</span>
